# tri-objective-robust-xai-medimg

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  API_TESTING_COMPLETE.md  BASELINE_TRAINER_TEST_REPORT.md  CHECK_READY.ps1  CITATION.cff  CODE_OF_CONDUCT.md  COLAB_QUICKSTART.md  COLAB_RETRAIN_TRI_OBJECTIVE.ipynb  COLAB_SETUP_GUIDE.md  COMPLETE_EXECUTION_GUIDE.md  COMPREHENSIVE_NOTEBOOK_OUTPUTS_SUMMARY.md  CONTRIBUTING.md  CRITICAL_BUG_REPORT.md  CUDA_FIX_COMPLETE.md  DATASET_COMMANDS_AND_MOCKS.md  DATASET_MIGRATION_COMPLETE.md  DATASET_READY.md  DAY1_EXECUTIVE_SUMMARY.md  DISSERTATION_CHAPTER_5.2_TEMPLATE.md  DOCS_VERIFICATION.md  Dockerfile  EXECUTION_CHECKLIST.md  GIT_PUSH_SUCCESS.md  GOOGLE_COLAB_TRAINING_GUIDE.md  H1B_FAILURE_ROOT_CAUSE_ANALYSIS.md  HPO_ANALYSIS_TEST_REPORT.md  HPO_COVERAGE_PROJECT_COMPLETE.md  HPO_OBJECTIVE_TEST_REPORT.md  INTERACTIVE_DEMO_DEBUG_GUIDE.md  LICENSE  Methodology.md  PHASE3.5_EVALUATION_STATUS.md  PHASE3.6_CXR_STATUS.md  PHASE3.6_SUMMARY.md  PHASE3.8_SANITY_CHECK.md  PHASE3.8_STATUS.md  PHASE3.8_SUMMARY.md  (+139 more)
.dvc/: config
configs/: base.yaml
data/: .gitignore
data_tracking/: .gitignore  derm7pt_metadata.csv.dvc  isic_2018_metadata.csv.dvc  isic_2019_metadata.csv.dvc  isic_2020_metadata.csv.dvc  nih_cxr_metadata.csv.dvc  padchest_metadata.csv.dvc  registry.json.dvc
docs/: ARCHITECTURE_EFFICIENTNETB0.md  ARCHITECTURE_RESNET50.md  Chapter_5_Development_Process.md  api.rst  conf.py  datasets.md  index.rst
notebooks/: 01_phase_completion.ipynb  03_adversarial_examples.ipynb  PHASE_10_ABLATION_STUDY.ipynb  (+18 more)
(+576 files in other folders)
